// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adds flow preset if hasFlow option passed 1`] = `
Object {
  "presets": Array [
    "@babel/preset-react",
    "@babel/preset-flow",
  ],
}
`;

exports[`convert comma separated presets/plugins into an array 1`] = `
Object {
  "env": Object {
    "development": Object {
      "plugins": Array [
        "babel-plugin-istanbul",
        "@babel/plugin-transform-react-jsx-source",
        "@babel/plugin-transform-react-inline-elements",
      ],
    },
  },
  "plugins": Array [
    "@babel/plugin-proposal-function-bind",
    Array [
      "@babel/plugin-proposal-class-properties",
      Object {
        "loose": true,
      },
    ],
  ],
  "presets": Array [
    "@babel/preset-env",
    "@babel/preset-react",
  ],
}
`;

exports[`does not add flow preset if hasFlow option is not passed 1`] = `
Object {
  "presets": Array [
    "@babel/preset-react",
  ],
}
`;

exports[`does not another flow preset if already present and hasFlow option passed 1`] = `
Object {
  "presets": Array [
    "@babel/preset-react",
    "@babel/preset-flow",
  ],
}
`;

exports[`package that is removed 1`] = `
Object {
  "plugins": Array [
    "@babel/plugin-proposal-function-bind",
    "@babel/plugin-transform-spread",
    "instanbul",
  ],
}
`;

exports[`packages (json5) 1`] = `
Object {
  "env": Object {
    "development": Object {
      "plugins": Array [
        "babel-plugin-istanbul",
        "@babel/plugin-transform-react-jsx-source",
        "@babel/plugin-transform-react-jsx-self",
      ],
    },
    "production": Object {
      "plugins": Array [
        "@babel/plugin-transform-react-constant-elements",
        "@babel/plugin-transform-react-inline-elements",
      ],
    },
  },
  "plugins": Array [
    "@babel/plugin-proposal-function-bind",
    Array [
      "@babel/plugin-proposal-object-rest-spread",
      Object {
        "useBuiltIns": true,
      },
    ],
    Array [
      "@babel/plugin-proposal-class-properties",
      Object {
        "loose": true,
      },
    ],
  ],
  "presets": Array [
    "@babel/preset-env",
    Array [
      "@babel/preset-env",
      Object {
        "modules": false,
      },
    ],
    "@babel/preset-react",
  ],
}
`;

exports[`packages 1`] = `
Object {
  "env": Object {
    "development": Object {
      "plugins": Array [
        "babel-plugin-istanbul",
        "@babel/plugin-transform-react-jsx-source",
        "@babel/plugin-transform-react-jsx-self",
      ],
    },
    "production": Object {
      "plugins": Array [
        "@babel/plugin-transform-react-constant-elements",
        "@babel/plugin-transform-react-inline-elements",
      ],
    },
  },
  "plugins": Array [
    "@babel/plugin-proposal-function-bind",
    Array [
      "@babel/plugin-proposal-object-rest-spread",
      Object {
        "useBuiltIns": true,
      },
    ],
    Array [
      "@babel/plugin-proposal-class-properties",
      Object {
        "loose": true,
      },
    ],
  ],
  "presets": Array [
    "@babel/preset-env",
    Array [
      "@babel/preset-env",
      Object {
        "modules": false,
      },
    ],
    "@babel/preset-react",
  ],
}
`;

exports[`rename community packages 1`] = `
Object {
  "env": Object {
    "development": Object {
      "plugins": Array [
        "lodash",
      ],
    },
  },
  "plugins": Array [
    "lodash",
  ],
}
`;

exports[`sets \`loose\` option on plugins that are now spec by default if needed 1`] = `
Object {
  "plugins": Array [
    Array [
      "@babel/plugin-proposal-class-properties",
      Object {
        "loose": true,
      },
    ],
    Array [
      "@babel/plugin-proposal-class-properties",
      Object {
        "loose": true,
      },
    ],
    Array [
      "@babel/plugin-transform-template-literals",
      Object {
        "loose": true,
      },
    ],
    Array [
      "@babel/plugin-transform-template-literals",
      Object {
        "loose": true,
      },
    ],
    Array [
      "@babel/plugin-proposal-class-properties",
      Object {
        "loose": true,
      },
    ],
    Array [
      "@babel/plugin-proposal-class-properties",
      Object {
        "loose": true,
      },
    ],
    Array [
      "@babel/plugin-transform-template-literals",
      Object {
        "loose": true,
      },
    ],
    Array [
      "@babel/plugin-transform-template-literals",
      Object {
        "loose": true,
      },
    ],
    Array [
      "@babel/plugin-proposal-class-properties",
      Object {
        "loose": true,
      },
    ],
    Array [
      "@babel/plugin-proposal-class-properties",
      Object {
        "loose": true,
      },
    ],
    Array [
      "@babel/plugin-transform-template-literals",
      Object {
        "loose": true,
      },
    ],
    Array [
      "@babel/plugin-transform-template-literals",
      Object {
        "loose": true,
      },
    ],
    "@babel/plugin-proposal-class-properties",
    "@babel/plugin-proposal-class-properties",
    "@babel/plugin-transform-template-literals",
    "@babel/plugin-transform-template-literals",
  ],
}
`;
